// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateFormat component DateFormat renders with date integer 1`] = `
<Fragment>
  <Tooltip
    content={
      <div>
        
        01 Jan 1970 00:00 UTC
      </div>
    }
  >
    <span>
      Just now
    </span>
  </Tooltip>
</Fragment>
`;

exports[`DateFormat component DateFormat renders with date integer 2`] = `
<Fragment>
  01 Jan 1970 00:00 UTC
</Fragment>
`;

exports[`DateFormat component DateFormat renders with date integer 3`] = `
<Fragment>
  01 Jan 1970
</Fragment>
`;

exports[`DateFormat component DateFormat renders with date object 1`] = `
<Fragment>
  <Tooltip
    content={
      <div>
        
        31 Dec 2019 00:00 UTC
      </div>
    }
  >
    <span>
      Just now
    </span>
  </Tooltip>
</Fragment>
`;

exports[`DateFormat component DateFormat renders with date string 1`] = `
<Fragment>
  <Tooltip
    content={
      <div>
        
        31 Dec 2019 00:00 UTC
      </div>
    }
  >
    <span>
      Just now
    </span>
  </Tooltip>
</Fragment>
`;
